--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -11767,8 +11767,14 @@ body.sidebar-toggled footer.sticky-footer {
     border: solid 1px #004df1;
 }
 
-.imagen_perfil {
+.imagen-perfil {
     width: 300px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 50% !important;
+}
+
+.contenedor-perfil {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+        rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    margin-top: 0px !important;
 }
