--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -11791,6 +11791,11 @@ body.sidebar-toggled footer.sticky-footer {
         rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
+.sombra2 {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+        rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
 #img-registrar {
     margin: 55px 12px 0px !important;
 }
